repos/examples/go_server/k8s/base/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: go-server
---
# This maps a loadbalancer ingress into the cluster to a k8s service.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-server
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    # What should the external DNS name be
    external-dns.alpha.kubernetes.io/hostname: "go-server.examples.test"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    # For the given external DNS host redirect to the service specified.
    - host: go-server.examples.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-server
                port:
                  number: 50051
---
# A service is a mechanism to allow for a stable DNS name for a set of
# dynamically allocated pods with dynamic IPs.
kind: Service
apiVersion: v1
metadata:
  name: go-server
  labels:
    app: go-server
spec:
  selector:
    app: go-server
  ports:
    - name: go-server
      port: 80
      targetPort: 50051
---
# The deployment manages the set of running pods, they will all have dynamic IPs
# since the pods are ephemeral.
kind: Deployment
apiVersion: apps/v1
metadata:
  name: go-server
spec:
  selector:
    matchLabels:
      app: go-server
  replicas: 1
  template:
    metadata:
      labels:
        app: go-server
    spec:
      containers:
        - name: go-server
          image: go-server
          imagePullPolicy: "Always"
          ports:
            - containerPort: 50051
